The GroupContentRestricted error is used for both 'sequence' and 'choice' models, so get the model at runtime (XERCESC-1724)

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@560922 13f79535-47bb-0310-9956-ffa450edef68